--- a/example/package.json
+++ b/example/package.json
@@ -13,10 +13,16 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@pdftron/react-native-pdf": "^3.0.3-18",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "deprecated-react-native-prop-types": "^2.3.0",
     "react": "^18.0.0",
     "react-native": "^0.69.1",
-    "react-native-pdftron": "file:../"
+    "react-native-document-picker": "^8.2.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-safe-area-context": "^4.5.2",
+    "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
